force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Is_FlatPrice_Condition__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_FlatPrice_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This condition will be used for Flat Price waterfall calculation (FR: SRP calculation). Coming by default from Conditions library and updated by exception by the contract owner</description>
    <label>Is Flat Price Condition</label>
    <type>Checkbox</type>
</CustomField>