force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Is_Manual_Invoicing_Planning__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_Manual_Invoicing_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify that planning of invoicing is defined manually by the user for the contract discount row (manual selection is save in Invoicing_Planning_Summary__c &amp; automatic invoicing procdeure will not be run for this row)</description>
    <inlineHelpText>Si vous mettez &quot;Aucun&quot; dans la colonne &quot;Période de facturation&quot;, une coche et un petit icône  apparaissent  pour pouvoir mettre manuellement les mois sélectionnés&quot;</inlineHelpText>
    <label>Is Manual Invoicing Planning</label>
    <type>Checkbox</type>
</CustomField>