force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Is_Prenego_Envelop__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_Prenego_Envelop__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Define if the contract line is a prenegotiated amount  (then contribution deal inside the initial yearly agreement) or an additional partner contribution dealing during the year. For dispatched fixed amount values follow if contribute to a prenegotiated envelope or to a non-prenegotiated envelop</description>
    <inlineHelpText>Define if the contract line is a prenegotiated amount  (then contribution deal inside the initial yearly agreement) or an additional partner contribution dealing during the year. For dispatched fixed amount values follow if contribute to a prenegotiated e</inlineHelpText>
    <label>Is Pre-Negotiated Envelop</label>
    <type>Checkbox</type>
</CustomField>