force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Is_Yearly_Condition__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_Yearly_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Yearly Condition</label>
    <type>Checkbox</type>
</CustomField>