force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Last_History__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Last_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Last history following this contract row versionning</description>
    <inlineHelpText>Last history following this contract row versionning</inlineHelpText>
    <label>Last History</label>
    <referenceTo>Negoptim__Contract_Discount__c</referenceTo>
    <relationshipLabel>Lignes contrats (Last History)</relationshipLabel>
    <relationshipName>Contract_Discount_Version</relationshipName>
    <type>Lookup</type>
</CustomField>