force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__legal_reference__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__legal_reference__c</fullName>
    <label>Legal reference</label>
    <type>TextArea</type>
</CustomField>