force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Maximum_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Maximum_Guarantee__c</fullName>
    <description>Give the maximum acceptable to be paid for the condition by the partner.</description>
    <inlineHelpText>Give the maximum acceptable to be paid for the condition by the partner.</inlineHelpText>
    <label>Maximum Guarantee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>