force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Minimum_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Minimum_Guarantee__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Assure a minimum guarantee for the condition</description>
    <label>Minimum Guarantee</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>