force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Nego_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Nego_Discount_Type__c</fullName>
    <description>Type parent of the tariff condition (tariff Discounts, Rebates, Marketing fees, ....</description>
    <inlineHelpText>Type de la condition tarifaire (ristournes, coop,..)</inlineHelpText>
    <label>Nego Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Nego_Discount_Type</valueSetName>
    </valueSet>
</CustomField>