force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__NS_Code__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__NS_Code__c</fullName>
    <formula>Negoptim__Contract__r.Negoptim__Supplier_Nego_Scope__r.Negoptim__NS_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nego Scope Code</label>
    <type>Text</type>
</CustomField>