force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__OriginFromMove_ContractDiscount__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__OriginFromMove_ContractDiscount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin From Move ContractDiscount</label>
    <referenceTo>Negoptim__Contract_Discount__c</referenceTo>
    <relationshipLabel>Lignes contrats (Origin From Move ContractDiscount)</relationshipLabel>
    <relationshipName>Lignes_contrats</relationshipName>
    <type>Lookup</type>
</CustomField>