force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__OriginFromMove_per__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__OriginFromMove_per__c</fullName>
    <label>Origin From Move (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>