force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__OriginFromMove_U__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__OriginFromMove_U__c</fullName>
    <label>Origin From Move (U)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>