force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Parent_Discount__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Parent_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Discount</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Parent_Discount__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Negoptim__Contract_Discount__c.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Sub_Term_Signed</value>
        </filterItems>
        <filterItems>
            <field>Negoptim__Contract_Discount__c.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Sub_Term_To_Be_Signed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Contract_Discount__c</referenceTo>
    <relationshipLabel>Lignes contrats (Parent Discount)</relationshipLabel>
    <relationshipName>Children_Contract_Discount</relationshipName>
    <type>Lookup</type>
</CustomField>