force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Payment_Condition__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Payment_Condition__c</fullName>
    <label>Payment Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Payment_term_condition</valueSetName>
    </valueSet>
</CustomField>