force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Payment_Days__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Payment_Days__c</fullName>
    <label>Payment term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Payment_term_day</valueSetName>
    </valueSet>
</CustomField>