force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Product_Scope__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product_Scope__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Scope</label>
    <referenceTo>Negoptim__NegoScope__c</referenceTo>
    <relationshipName>Contract_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>