force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Prog_Quantity_Actu__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Prog_Quantity_Actu__c</fullName>
    <formula>If(Negoptim__Base_Quantity_Actual_1__c = 0, Null, (Negoptim__Base_Quantity_Actual__c-Negoptim__Base_Quantity_Actual_1__c)/Negoptim__Base_Quantity_Actual_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prog Quantity Actual</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>