force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Prog_SellOut_Nego__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Prog_SellOut_Nego__c</fullName>
    <formula>if(Negoptim__Base_SellOut_Nego_1__c = 0, Null, (Negoptim__Base_SellOut_Nego__c-Negoptim__Base_SellOut_Nego_1__c) / Negoptim__Base_SellOut_Nego_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prog Sell Out Nego</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>