force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Proof_counterparty_definition__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_definition__c</fullName>
    <description>Display the counterparty definition specified for the selected condition.</description>
    <inlineHelpText>Display the counterparty definition specified for the selected condition.</inlineHelpText>
    <label>Counterparty Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>