force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Proof_Counterparty_Execution_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_Counterparty_Execution_Agreement__c</fullName>
    <label>Counterparty Execution Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Mandat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>