force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Proof_counterparty_number_total__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_number_total__c</fullName>
    <description>Number of counterparty deals for the total contract period (total event participation for ex).</description>
    <inlineHelpText>Number of counterparty deals for the total contract period (total event participation for ex).</inlineHelpText>
    <label>Counterparty Total #</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>