force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Proof_counterparty_object__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_object__c</fullName>
    <label>Counterparty Object</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Proof_counterparty_object</valueSetName>
    </valueSet>
</CustomField>