force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Proof_counterparty_type__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_type__c</fullName>
    <description>Select the dealing counterpart in the predefined condition type list.</description>
    <inlineHelpText>Select the dealing counterpart in the predefined condition type list.</inlineHelpText>
    <label>Counterparty Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Proof_counterparty_type</valueSetName>
    </valueSet>
</CustomField>