force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Provision_base__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Provision_base__c</fullName>
    <description>What is the reference database used for the calculation?</description>
    <inlineHelpText>What is the reference database used for the calculation?</inlineHelpText>
    <label>Provision base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Database_origin</valueSetName>
    </valueSet>
</CustomField>