force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Provision_period__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Provision_period__c</fullName>
    <inlineHelpText>Fréquence de provision</inlineHelpText>
    <label>Provision period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Periodicity</valueSetName>
    </valueSet>
</CustomField>