force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Provision_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Provision_Sequence__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Provision Sequence</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>