force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Rank__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Rank__c</fullName>
    <defaultValue>null</defaultValue>
    <description>Rank of the condition</description>
    <inlineHelpText>Rang de la condition</inlineHelpText>
    <label>Cascade Rank</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>