force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Reference_condition__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Reference_condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference condition</label>
    <referenceTo>Negoptim__Contract_Discount__c</referenceTo>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>