force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Respects_Contract_Scope__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Respects_Contract_Scope__c</fullName>
    <description>Check if gap exists between the contract scope and the condition scope (BU, Products, Dates).</description>
    <formula>If( AND(Negoptim__Product_Scope__c =  Negoptim__Contract__r.Negoptim__Supplier_Nego_Scope__c,  
        Negoptim__BU_Scope__c =  Negoptim__Contract__r.Negoptim__Contract_BU__c,
        Negoptim__Disc_BDate__c = Negoptim__Contract__r.Negoptim__Contract_BDate__c,
        Negoptim__Disc_EDate__c = Negoptim__Contract__r.Negoptim__Contract_EDate__c,
        OR(Negoptim__unit_amount__c = 0, AND(Negoptim__unit_amount__c &lt;&gt; 0, OR(TEXT(Negoptim__Unit_Amount_Type__c) = &apos;Piece&apos;, TEXT(Negoptim__Unit_Amount_Type__c) = &apos;UC&apos;)))) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Précise si la condition suit le scope du contrat ou un scope spécifique</inlineHelpText>
    <label>Respects Contract Scope</label>
    <type>Checkbox</type>
</CustomField>