force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Scope_BU__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Scope_BU__c</fullName>
    <description>List of stores defining the condition scope</description>
    <label>Scope BU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__BU</valueSetName>
    </valueSet>
</CustomField>