force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__Scope_id__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Scope_id__c</fullName>
    <formula>Negoptim__Product_Scope__r.Negoptim__NS_Code_Long__c
&amp; &apos;-&apos; &amp;   Negoptim__BU_Scope__r.Negoptim__BU_Code__c
&amp; &apos;-&apos; &amp; IF(ISNULL(Negoptim__Disc_BDate__c), &apos;01&apos; , LPAD(TEXT(MONTH(Negoptim__Disc_BDate__c)), 2, &apos;0&apos;))
&amp; &apos;-&apos; &amp; IF(ISNULL(Negoptim__Disc_EDate__c), &apos;12&apos;, LPAD(TEXT(MONTH(Negoptim__Disc_EDate__c)), 2, &apos;0&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope id</label>
    <type>Text</type>
</CustomField>