force-app/main/default/objects/Negoptim__Contract_Discount__c/fields/Negoptim__slab_reach_actual__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__slab_reach_actual__c</fullName>
    <description>Auto calculate the slab reached based on base TO</description>
    <formula>IF(Negoptim__Is_Conditional__c,
case( Negoptim__slab_calc_method__c ,
&quot;TO&quot;,

IF(Negoptim__Base_TO_Actual__c &gt;= Negoptim__Slab_1__c  &amp;&amp;  (Negoptim__Base_TO_Actual__c &lt; Negoptim__Slab_2__c || ISBLANK(Negoptim__Slab_2__c)), 1 ,
IF(Negoptim__Base_TO_Actual__c &gt;= Negoptim__Slab_2__c  &amp;&amp;  (Negoptim__Base_TO_Actual__c &lt; Negoptim__Slab_3__c || ISBLANK(Negoptim__Slab_3__c)), 2 ,
IF(Negoptim__Base_TO_Actual__c &gt;= Negoptim__Slab_3__c  &amp;&amp;  (Negoptim__Base_TO_Actual__c &lt; Negoptim__Slab_4__c || ISBLANK(Negoptim__Slab_4__c)), 3 ,
IF(Negoptim__Base_TO_Actual__c &gt;= Negoptim__Slab_4__c  &amp;&amp;  (Negoptim__Base_TO_Actual__c &lt; Negoptim__Slab_5__c || ISBLANK(Negoptim__Slab_5__c)), 4 ,
IF(Negoptim__Base_TO_Actual__c &gt;= Negoptim__Slab_5__c  &amp;&amp;  (Negoptim__Base_TO_Actual__c &lt; Negoptim__Slab_6__c || ISBLANK(Negoptim__Slab_6__c)), 5 ,
IF(Negoptim__Base_TO_Actual__c &gt;= Negoptim__Slab_6__c, 6 , null)))))),
&quot;Prog TO&quot;,

IF(Negoptim__Prog_TO_Actu__c*100 &gt;= Negoptim__Slab_1__c &amp;&amp; (Negoptim__Prog_TO_Actu__c*100 &lt; Negoptim__Slab_2__c || ISBLANK(Negoptim__Slab_2__c)), 1 , 
IF(Negoptim__Prog_TO_Actu__c*100 &gt;= Negoptim__Slab_2__c &amp;&amp; (Negoptim__Prog_TO_Actu__c*100 &lt; Negoptim__Slab_3__c || ISBLANK(Negoptim__Slab_3__c)), 2 , 
IF(Negoptim__Prog_TO_Actu__c*100 &gt;= Negoptim__Slab_3__c &amp;&amp; (Negoptim__Prog_TO_Actu__c*100 &lt; Negoptim__Slab_4__c || ISBLANK(Negoptim__Slab_4__c)), 3 , 
IF(Negoptim__Prog_TO_Actu__c*100 &gt;= Negoptim__Slab_4__c &amp;&amp; (Negoptim__Prog_TO_Actu__c*100 &lt; Negoptim__Slab_5__c || ISBLANK(Negoptim__Slab_5__c)), 4 , 
IF(Negoptim__Prog_TO_Actu__c*100 &gt;= Negoptim__Slab_5__c, 5 , null))))),

 null),null)</formula>
    <label>Slab Reach - Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>